# accounting

./: .gitignore  accounting.psm1  bug.ps1  cli.ps1  config-example.json  cuentas.csv  fields-example.json  plot.py  readme.md
Classes/: CSV.ps1  (+4 more)
acc_py/: main-test.py  main.py  pyproject.toml  readme.md  t.py  test.py
acc_py/classes/: context.py  model.py
acc_py/context/: context.py  main.py  utils.py
acc_py/db/: db_api.py  model.py
acc_py/interfaces/: db_api.py  independent.py  plot.py
acc_py/pkg/classes/: __init__.py  context.py  model.py
acc_py/pkg/interfaces/: db_api.py  independent.py  plot.py
acc_py/pkg/utilities/: core.py  currency.py  file.py  jops.py  parser.py  prompt.py  typing.py
acc_py/plot/: plot.py
acc_py/src/acc_py/: __init__.py  classes.py  context.py  plot.py  validate.py
acc_py/src/classes/: context.py  model.py
acc_py/src/interfaces/: db_api.py  independent.py  plot.py
acc_py/src/utilities/: core.py  currency.py  file.py  help.py  parser.py  prompt.py
acc_py/templates/: csv_metadata.j2  db_help.txt  plot_help.txt
acc_py/test/: context-template.py  core_parser.py  get.py  interface.py  plot.py  prompts.py  unified.py  validate-plot.py  validate-write.py  write.py
acc_py/tests/: _shared.py  context_utils.py  core.py  currency.py  file.py  miscellanea.py  model.py  parser.py  prompt.py
acc_py/tests/files/: miscellanea.json  test_import_fields_json_err_1.json  test_import_fields_json_err_2.json  (+1 more)
acc_py/utilities/: core.py  core_parser.py  currency.py  file.py  help.py  interface.py  miscellanea.py  parser.py  prompt.py
(+60 files in other folders)
