[project]
name = "acc-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergio Gastulo",email = "sgastulo04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poetry]
packages = [{include = "acc_py", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
